--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@usedapp/core": "^1.2.16",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "eslint": "8.49.0",
     "eslint-config-next": "^14.0.4",
+    "ethers": "5",
+    "framer-motion": "^12.6.3",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.9.5",
